# HelpDeskAiAgent

./: .dockerignore  .env.example  .flake8  CONTRIBUTING.md  DEXA_v3.2_Agent_Guide.md  DEXA_v4.0_Agent_Prompt.md  Dockerfile  LICENSE  README.md  aiagentprompt.txt  config.py  config_dev.py  config_staging.py  docker-compose.yml  dockerfile  main.py  mcp_server.py  mypy.ini  package-lock.json  prompt.ini  prompt.md  pyproject.toml  requirements.txt  schema_models.py  schemas.py  verify_tools.py
ai/: mcp_agent.py  openai_agent.py
alembic/: env.py
api/: routes.py
db/: __init__.py  models.py  mssql.py  session.py  sql.py
docs/: API.md  DATETIME_FORMAT.md  DEXA_v5.6_prompt.md  MCP_TOOLS_GUIDE.md
schemas/: __init__.py  analytics.py  basic.py  oncall.py  paginated.py  search.py  search_params.py  ticket.py
scripts/: setup-tests.sh
services/: analytics_service.py  ticket_service.py
src/: __init__.py  enhanced_mcp_server.py  mcp_server.py  tool_list.py
tests/: __init__.py  conftest.py  test_additional_tools.py  test_advanced_filters.py  test_advanced_query_batch.py  test_advanced_query_limit.py  test_advanced_query_sorting.py  test_ai.py  test_analytics.py  test_analytics_cache_lock.py  test_app.py  test_cli.py  test_concurrency.py  test_date_format.py  test_db_conn.py  test_dynamic_tools.py  test_engine_disposal.py  test_enhanced_context_manager.py  test_enhanced_integration.py  test_enhanced_operations.py  test_enhanced_search.py  test_error_handler.py  test_health.py  test_mcp.py  test_mcp_failure.py  test_mcp_tools_optimization.py  test_oncall.py  (+29 more)
(+68 files in other folders)
